# feedback-video-system

./: .env.example  .gitignore  .tool-versions  README.md  Tiltfile  alembic.ini  create_project.sh  diagram.xml  example_script_prompt.txt  project-bootstrap.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 17b87c431322_create_initial_tables.py  3f2d70d4db66_initial_migration.py  aa3dce0c2157_add_callback_id_to_video_model.py  acf91d06089f_initial_migration.py  d308e67c4b3e_initial_migration.py
scripts/: insert_initial_data.py
src/: database.py  logging_config.py  main.py  settings.py
src/api/dependencies/: db.py
src/api/exceptions/: handlers.py
src/api/routes/: video.py  webhooks.py
src/models/: __init__.py  base.py  database.py  itp.py  schema.py  video.py
src/schema/: base.py  grading.py  itp.py  video.py
src/script/: feedback_script.py
src/services/: synthesia.py  video.py
src/services/dialogue/: chains.py  script.py  video.py
src/utils/: logger.py
