[tool.poetry]
name = "video-generator"
version = "0.1.0"
description = "Generates feedback videos using Synthesia"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.0"
sshtunnel = "^0.4.0"
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.1.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "B"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"